[EFL] EFL Webkit needs a class wrapping eina stringshare https://bugs.webkit.org/show_bug.cgi?id=93229

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-08-08
Reviewed by Kenneth Rohde Christiansen.

Added a new auxiliary class wrapping Eina Stringshare and providing
more convenient C++ interface for using it.

* PlatformEfl.cmake:
* UIProcess/API/cpp/efl/WKEinaSharedString.cpp: Added.
(:m_string):
(WKEinaSharedString::~WKEinaSharedString):
(WKEinaSharedString::operator=):
* UIProcess/API/cpp/efl/WKEinaSharedString.h: Added.
(WebKit):

Canonical link: https://commits.webkit.org/111343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125035 268f45cc-cd09-0410-ab3c-d52691b4dbfc